--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.8",
     "react-helmet": "^5.2.1",
     "react-reveal": "^1.2.2",
     "react-typography": "^0.16.19",
